--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>MA-lesson1</title>
 </head>
 <body>
-    Hello, world!
+    <h1 contenteditable="true">Hello, world!</h1>
+    <p contenteditable="true">Test text</p>
 </body>
 </html>
