--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body>
     <h1 contenteditable="true">Hello, world!</h1>
     <p contenteditable="true">Test text</p>
+    <div contenteditable="true">
+      Text
+    </div>
+
 </body>
 </html>
